--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	<!-- If version contains -SNAPSHOT, Nexus will not allow artifact to be staged -->
 	
 
-
+	<!-- a comment -->
 
 
 	<!--Distribution management controls the Nexus repo location -->
