--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	
 
 	<!-- a comment -->
-
+	<!-- another comment -->
 
 	<!--Distribution management controls the Nexus repo location -->
 	<distributionManagement>
