--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
     <version>6.0.1</version>
 	<!-- If version contains -SNAPSHOT, Nexus will not allow artifact to be staged -->
 	
+	<!-- comment -->
 
 	<!--Distribution management controls the Nexus repo location -->
 	<distributionManagement>
