--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,10 @@
 	<!-- comment -->
 	<!-- comment -->
 	<!-- comment -->
+	<!-- comment -->
+	<!-- comment -->
+	<!-- comment -->
+	<!-- comment -->
 
 	<!--Distribution management controls the Nexus repo location -->
 	<distributionManagement>
