--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
 	<!-- If version contains -SNAPSHOT, Nexus will not allow artifact to be staged -->
 	
 	<!-- comment -->
+	<!-- comment -->
 
 	<!--Distribution management controls the Nexus repo location -->
 	<distributionManagement>
