--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,9 @@
 	<!-- comment -->
 	<!-- comment -->
 	<!-- comment -->
+	<!-- comment -->
+	<!-- comment -->
+	<!-- comment -->
 
 	<!--Distribution management controls the Nexus repo location -->
 	<distributionManagement>
