--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,8 @@
 	<!-- comment -->
 	<!-- comment -->
 	<!-- comment -->
+	<!-- comment -->
+	<!-- comment -->
 
 	<!--Distribution management controls the Nexus repo location -->
 	<distributionManagement>
