--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
 	<!-- comment -->
 	<!-- comment -->
 	<!-- comment -->
+	<!-- comment -->
 
 	<!--Distribution management controls the Nexus repo location -->
 	<distributionManagement>
