--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 	<!-- comment -->
 	<!-- comment -->
 	<!-- comment -->
+	<!-- comment -->
 
 	<!--Distribution management controls the Nexus repo location -->
 	<distributionManagement>
