--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
 	<!-- comment -->
 	<!-- comment -->
 	<!-- comment -->
+	<!-- comment -->
 
 	<!--Distribution management controls the Nexus repo location -->
 	<distributionManagement>
