--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
 	
 	<!-- comment -->
 	<!-- comment -->
+	<!-- comment -->
 	
 	<!--Distribution management controls the Nexus repo location -->
 	<distributionManagement>
